# AsteroScale

./: LICENSE  README.md  example.ipynb  pyproject.toml
astero_solver/: __init__.py  batch.py  distributions.py  priors.py  relations.py  solver.py  validation.py  viz.py
asteroscale/: __init__.py  batch.py  calibration.py  distributions.py  forward.py  priors.py  relations.py  sampling.py  solver.py  utils.py  validation.py  validity.py  viz.py
docs/: conf.py  getting-started.md  index.md  installation.md  limitations.md
docs/concepts/: amplitudes.md  asteroseismology-for-exoplanets.md  asteroseismology-in-a-nutshell.md  calibration-and-scatter.md  index.md  sampling-and-priors.md
docs/reference/: api.md  index.md  quantities.md  references.md
docs/tutorials/: advanced-workflows.ipynb  gaia-constraints.ipynb  index.md  inferring-stellar-properties.ipynb  predicting-oscillations.ipynb  priors-and-relations.ipynb  real-star-comparisons.ipynb
examples/: example.ipynb  known_stars.py
tests/: test_benchmarks.py  test_calibration.py  test_relations.py  test_sampling.py  test_solver_logic.py
