[project]
name = "AsteroScale"
version = "0.2.0"
description = "Marginalizing solver for asteroseismic scaling relations"
requires-python = ">=3.9"
dependencies = ["numpy", "scipy", "dynesty", "matplotlib", "jax"]

[project.optional-dependencies]
test = ["pytest>=7"]
docs = [
    "sphinx>=7",
    "pydata-sphinx-theme>=0.15",
    "myst-nb>=1.1",
    "sphinx-copybutton>=0.5",
    "sphinx-design>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
